# CameraSimulator

./: CMakeLists.txt  FullClean.sh  README.md  Rebuild.sh  RunApp.sh  RunTests.sh
.github/workflows/: ci.yml
src/: main.cpp
src/displaysink/: IDisplaySink.h
src/framesource/: DiskFrameSource.cpp  DiskFrameSource.h  FrameSourceRunner.cpp  FrameSourceRunner.h  IFrameSource.h
src/profiler/: CamSimProfiler.cpp  CamSimProfiler.h  ProfilerMetrics.cpp  ProfilerMetrics.h
src/simulator/: CameraSimulator.cpp  CameraSimulator.h
src/utils/: CamSimCommons.h  CamSimLogger.cpp  CamSimLogger.h
tests/: test_CamSimLogger.cpp  test_CamSimProfiler.cpp  test_FrameSource.cpp  test_Runner.cpp
